# TIL

./: .gitignore
20210626/: Makefile  NOTE  main.c  testfile
20210627/: Makefile  NOTE
20210629/: main.c
20210701/: Makefile  NOTE.txt
20210708/: main.cc
20210709/: Makefile  note.txt  readv.c
20210712/: note.txt
20210721/: main.c
EMC++/: auto.txt  main.cc
algorithms/binary_search/: main.py
c++/: Makefile  ex2-2.cc  main.cc
c++/employee_management/: CMakeLists.txt  database.cc  employee.h  employee_test.cc  main.cc
cpp/: CMakeLists.txt  ex2-1.cc  my_class.h
cpp/cmake_build/: CMakeLists.txt  CMakeLists.txt~
cpp/cmake_build/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/cmake_build/builds/boo/: Makefile  cmake_install.cmake
cpp/cmake_build/simple_tree/: CMakeLists.txt  CMakeLists.txt~
cpp/cmake_build/simple_tree/boo/bar/: CMakeLists.txt
cpp/cmake_build/simple_tree/foo/: CMakeLists.txt  CMakeLists.txt~
cpp/effective/: type_deduction.h
cpp/employee_management/: database.h
cpp/smart_pointer/: main.cc
cpp/time/: test_chrono  test_chrono.cpp
design-pattern/gof/: CMakeLists.txt
design-pattern/posa1/: README.md
design/gof/: CMakeLists.txt
design/posa1/: README.md
etc/coding-test/: incomplete_players.cc
languages/cpp/: #main.cc#  main.cc  my_class.h
languages/python/: main.py
linux-system-programming/20210701/: main.c
linux-system-programming/20210712/: Makefile
linux-system-programming/20210713/: note.txt
linux-system-programming/20210721/: note.txt
os/: README.md
python/: main.py
(+166 files in other folders)
